# oops-project

./: CMakeLists.txt  README.md  assignment.h  main.cpp  mainwindow.cpp  mainwindow.h  studentwidget.cpp  studentwidget.h  teacherwidget.cpp  teacherwidget.h
